2016-08-31 Noam Tal Hod <hod@cern.ch>
	* Added reclassification feature in case of event with extra ME
	b-quarks - these topologies have one set of libs in the SM case givne
	that the SM model used assumes m(b)=0, while in the H/A case there is
	another set of libs which take into account the b mass

2016-08-31 Noam Tal Hod <hod@cern.ch>
	* Added the weight functionality. Not all subprocesses are supported
	yet. Will add all later. Have a look at getTopology(...),
	get2HDMWeight(...) and the associated methods for details.

2016-08-30 Noam Tal Hod <hod@cern.ch>
	* Added 2HDM setup This is very preliminary and requrires some extra
	non-ATLAS tools/packages to be there on top of AnalysisTop. Please
	consault the README file(s).

2016-08-12 Samuel Calvet <scalvet@cern.ch>
	* Cleaning in MM codes

2016-08-11 Samuel Calvet <scalvet@cern.ch>
	* Add some missing branches to MiniTree

2016-08-09 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* The "0btag" and "1btag" splitting re-implemented in AnaTtresQCD code 

2016-08-05 Samuel Calvet <scalvet@cern.ch>
	* Code ready to run on 2 type of rates (2015/2016)
	* MiniTree has now the isData branch filled
	* Make all the codes use the last verion of the chi2

2016-08-02 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* Removed the muon triggers for 2016 version 

2016-07-01 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* separating the 2015 and 2016 analysis types for real and fake rates
	* TopNtupleAnalysis-00-02-16

2016-06-16 Marino Romano <sromanos@cern.ch>
	* Updating the tools for the real and fake estimation. Adding the MWT and MWT parametrisation in different minDR regions
	* Adding new Analysis class for the closure test for different CRs (AnaTtresMM)
	* Adding new real/fake rates for muon channel for W+jets CR (>=3D2 jets; ex-0 bjets and in-1 bjets)
	* Performing the MWT vs MET parametrisation for the muon channel. 